Change index,scss and plus tablet and mobile

--- a/index.html
+++ b/index.html
@@ -78,6 +78,38 @@
                 </div>
             </div>
         </section>
+        <section class="stories-section">
+            <div class="container">
+                <div class="stories">
+                    <div class="stories__title-wrapper">
+                        <h2 class="stories__title">Delivering real results for top companies. Some of our <span class="stories__title stories__title--color">success stories.</span></h2>
+                    </div>
+                    <ul class="stories__list">
+                        <li class="stories__item">
+                            <img class="stories__item-images" src="./images/scroll.svg" alt="scroll" width="67" height="56">
+                            <p class="stories__item-top-text"> “The team perfectly fit the specialized skill set required. They focused on the most essential features helping us launch the platform eight months faster than planned.”</p>
+                            <h4 class="stories__item-title">Kady Baker</h4>
+                            <i class="stories__item-bottom-text">Product Manager at Bookmark</i>
+                            <img src="./images/profil-mg.svg" alt="profil-img" width="62" height="62">
+                        </li>
+                        <li class="stories__item">
+                            <img class="stories__item-images" src="./images/scroll.svg" alt="scroll" width="67" height="56">
+                            <p class="stories__item-top-text"> “We needed to automate our entire onboarding process. The team came in and built out the whole journey. Since going live, user retention has gone through the roof!”</p>
+                            <h4 class="stories__item-title">Aiysha Reese</h4>
+                            <i class="stories__item-bottom-text">Founder of Manage</i>
+                            <img src="./images/profil-mg2.svg" alt="profil-img" width="62" height="62">
+                        </li>
+                        <li class="stories__item">
+                            <img class="stories__item-images" src="./images/scroll.svg" alt="scroll" width="67" height="56">
+                            <p class="stories__item-top-text">“Amazing. Our team helped us build an app that delivered a new experience for hiring a physio. The launch was an instant success with 100k downloads in the first month.”</p>
+                            <h4 class="stories__item-title">Arthur Clarke</h4>
+                            <i class="stories__item-bottom-text">Co-founder of MyPhysio</i>
+                            <img src="./images/profil-mg3.svg" alt="profil-img" width="62" height="62">
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
