--- a/index.html
+++ b/index.html
@@ -24,12 +24,31 @@
                         </li>
                     </ul>
                 </div>
-                <a class="header__contact-link" href="">contact us</a>
+                <a class="header__contact-link" target="_blank" href="./contact.html">contact us</a>
                 <button class="header__hamburger-btn">
                     <img src="./images/hamburger-menu.svg" alt="hamburger-menu" width="20" height="17">
                 </button>
             </div>
         </div>
+
+        <div id="modal-outer" class="modal modal-outer">
+            <div class="modal-inner">
+                <button class="modal modal__close-btn">
+                    <img src="./images/close-modal-img.svg" alt="Close modal icon" width="16" height="16">
+                </button>
+                <ul class="modal__list">
+                    <li class="modal__item">
+                        <a href="./index.html">home</a>
+                    </li>
+                    <li class="modal__item">
+                        <a href="#">about</a>
+                    </li>
+                </ul>
+                <a href="">contact us</a>
+            </div>
+        </div>
+
+
     </header>
     <main class="site-main">
         <section class="hero-section">
@@ -110,6 +129,52 @@
                 </div>
             </div>
         </section>
+        <section class="started-section">
+            <div class="container">
+                <div class="started">
+                    <h2 class="started-title">Ready to get started?</h2>
+                    <a class="started-link" href="#">contact us</a>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer class="footer-site">
+        <div class="container">
+            <div class="footer">
+                <div class="footer__logo-wrapper">
+                    <a class="footer__logo-link" href="#">
+                        <img class="footer__logo-img" src="./images/site-logo.svg" alt="site-logo" width="160" height="40">
+                    </a>
+                    <div class="footer__next-page">
+                        <a class="footer__next-page-link" href="#">home</a>
+                        <a class="footer__next-page-link" href="#">about</a>
+                    </div>
+                </div>
+                <div class="footer__address-wrapper">
+                    <a class="footer__address-link" href="">987  Hillcrest Lane</a>
+                    <a class="footer__address-link" href="">Irvine, CA</a>
+                    <a class="footer__address-link" href="">California 92714</a>
+                    <a class="footer__address-link" href="tel:+9498337432">Call Us : 949-833-7432</a>
+                </div>
+                <div class="footer__profile-wrapper">
+                    <div class="footer__profile-link-wrapper">
+                        <a class="footer__profile-link" href="#">
+                            <img class="footer__profile-img" src="./images/facebook-icon.svg" alt="Facebook-icon" width="24" height="24">
+                        </a>
+                        <a class="footer__profile-link" href="#">
+                            <img class="footer__profile-img" src="./images/pixso-icon.svg" alt="Pixso-icon" width="24" height="24">
+                        </a>
+                        <a class="footer__profile-link" href="#">
+                            <img class="footer__profile-img" src="./images/twitter-icon.svg" alt="Twitter-icon" width="24" height="19.5">
+                        </a>
+                    </div>
+                    <p class="footer__profile-text">Copyright 2020. All Rights Reserved</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
+    <script src="./js/main.js"></script>
 </body>
 </html>
